# cpp-code

./: .gitignore  README.md
build_project/: CMakeLists.txt  generate.cpp
matrix/: CMakeLists.txt
matrix/inc/: matrix.h  read_only.h
matrix/src/: dataUnit.cpp  main.cpp  matrix.cpp  read_only.cpp
mdgen/: CMakeLists.txt
mdgen/src/: main.cpp
recursion/: CMakeLists.txt
tools/: CMakeLists.txt
tools/inc/: matrix.h  read_matrix.h  read_only.h  string_tools.h
tools/src/: read_matrix.cpp  read_only.cpp  string_tools.cpp
