cmake_minimum_required(VERSION 3.15)
project(Matrix)
get_filename_component(PARENT_DIR ${CMAKE_SOURCE_DIR} DIRECTORY)
set(LIBPATH ${PARENT_DIR}/tools/lib)
set(CMAKE_CXX_STANDARD 11)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build)
file(GLOB SRC ${PROJECT_SOURCE_DIR}/src/*.cpp)
include_directories(${PROJECT_SOURCE_DIR}/inc)
include_directories(${PARENT_DIR}/tools/inc)
link_directories(${LIBPATH})
add_executable(main ${SRC})
target_link_libraries(main read)
message(STATUS "Lib Directory: ${LIBPATH}")
